--- a/.env
+++ b/.env
@@ -1,10 +1,19 @@
+# Database Configuration
 MONGODB_URI=mongodb+srv://khaled246:khaled%40123%24@laser.0ulc3bq.mongodb.net/donor-project?retryWrites=true&w=majority
-JWT_SECRET=your_jwt_secret_key_here
+
+# Security Configuration
+JWT_SECRET=khaled_donor_project_jwt_secret_key_2024_very_long_and_secure_random_string_at_least_32_characters
+
+# Server Configuration
 PORT=5000
+NODE_ENV=production
+
+# Email Service Configuration (Gmail SMTP)
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USER=khaledkassem223@gmail.com
-EMAIL_PASS=arcw czdr vcxr wsog
+EMAIL_PASS=arcwczdrvcxrwsog
 EMAIL_FROM=noreply@donorproject.com
-FRONTEND_URL=http://192.168.56.1:5173
-NODE_ENV=development
+
+# Frontend URL (Update this when you deploy your frontend)
+FRONTEND_URL=https://your-frontend-domain.com
