--- a/.env
+++ b/.env
@@ -16,4 +16,5 @@ EMAIL_PASS=arcwczdrvcxrwsog
 EMAIL_FROM=noreply@donorproject.com
 
 # Frontend URL (Update this when you deploy your frontend)
-FRONTEND_URL=https://your-frontend-domain.com
+# backend/.env
+FRONTEND_URL=https://donor-frontend-jszc-git-master-khaled4000s-projects.vercel.app
