Added new donor

--- a/.env
+++ b/.env
@@ -17,4 +17,4 @@ EMAIL_FROM=noreply@donorproject.com
 
 # Frontend URL (Update this when you deploy your frontend)
 # backend/.env
-FRONTEND_URL=https://donor-frontend-jszc-git-master-khaled4000s-projects.vercel.app
+ FRONTEND_URL=https://donor-frontend1.onrender.com
